--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html amp lang="en">
 <head>
     <meta charset="utf-8">
-    <title>App Landing Page</title>
+    <title>14:00 ⇆ㅤ❚❚ ───●──↻ 26:00
+VID</title>
     
     <script async src="https://cdn.ampproject.org/v0.js"></script>
 
-    <meta property="og:title" content="App Landing Page">
-    <meta property="og:description" content="Click to get the app and join us!">
+    <meta property="og:title" content="14:00 ⇆ㅤ❚❚ ───●──↻ 26:00
+VID">
+    <meta property="og:description" content="14:00 ⇆ㅤ❚❚ ───●──↻ 26:00
+VID">
     <meta property="og:image" content="https://api.pirsch.io/theme/files/42124_favicon.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://videycoo.github.io/fbo/">
+    <meta property="og:url" content="https://dood.mom/fulltime/">
 
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <link rel="canonical" href="https://videycoo.github.io/fbo/">
@@ -66,10 +69,10 @@
     </div>
 
     <div id="content-container">
-        <h1 class="card-title">Welcome to App</h1>
-        <p class="app-content">Download our app to get the best experience on your mobile device.</p>
+        <h1 class="card-title">Watch link and videos</h1>
+        <p class="app-content">livehot girls video</p>
         
-        <a href="YOUR_APP_LINK_HERE" class="cta-button">GET THE APP</a>
+        <a href="https://dood.mom/fulltime/" class="cta-button">DOWNLOAD VIDEO</a>
     </div>
 
 </body>
